app/assets/stylesheets/public/events.scss
.event-show{
  width: 100%;
}

.event-index-head-title{
  text-align: center;
  padding: 5px;
  display: flex;
  justify-content: center;
  align-items: center;
  .event-index-create-btn{
    margin-left: 20px;
  }
}
.events-kaminari{
  margin: 10px auto;
}
.event-index-container{
  position: relative;
  display: flex;
  flex-wrap: wrap;
  width: 90%;
  margin: 0 auto;
  .event-community-name{
    text-align: center;
    font-weight: bold;
    border: solid 1px black;
    border-radius: 5px;
  }
  .end-event{
    padding: 5px;
    text-align: center;
    background-color: red;
    color: white;
    width: 110px;
    z-index: 100px;
    border: solid 2px white;
    border-radius: 10px;
    position: absolute;
    top: 30px;
    left: 5px;
  }
  .active-event{
    padding: 5px;
    text-align: center;
    background-color: blue;
    color: white;
    width: 110px;
    z-index: 100px;
    border: solid 2px white;
    border-radius: 10px;
    position: absolute;
    top: 30px;
    left: 5px;
  }
  .img-container{
    width: 255px;
    height: 300px;
    img {
      width: 100%;
      height: 100%;
      object-fit: cover;
      border-radius: 10px;
    }
  }
  .text-container{
    width: 255px;
    margin-bottom: 5px;
    .card-title{
      min-height: 60px;
      text-align: center;
    }
    .event-owner-img{
      display: flex;
      justify-content: center;
      align-items: center;
      padding-top: 5px;
      img{
        width: 50px;
        height: 50px;
        margin: 5px;
        border-radius: 10px;
      }
    }
    .event-show-link-area{
      text-align: center;
      .event-show-link{
        width: 200px;
        border-radius: 10px;
        padding: 10px;
        margin-top: 10px;
        text-decoration: none;
      }
    }
    .event-action-btn{
      text-align: center;
      .event-show-link{
        width: 200px;
        border-radius: 10px;
        padding: 10px;
        margin-top: 10px;
        text-decoration: none;
      }
    }
  }
}

@media (max-width: 600px) {
  .event-index-container{
    display: flex;
    flex-wrap: wrap;
    width: 90%;
    margin: 0 auto;
    justify-content: center;
    .img-container{
      width: 300px;
      height: 300px;
      margin: 15px auto 0px auto;
      img {
        width: 100%;
        height: 100%;
        object-fit: cover;
        border-radius: 10px;
      }
    }
    .text-container{
      width: 350px;
      margin-bottom: 5px;
      .event-index-link{
        position: absolute;
        left: 70px;
        bottom: 5px;
      }
    }
  }
}

.event-show-title{
  text-align: center;
  margin: 0 auto;
  width: 90%;
  height: 60px;
  margin-bottom: 10px;
  height: 100px;
  background-color: white;
  .event-show-follow{
    position: sticky;
    top: 0;
    width: 100%;
    height: 60px;
    margin: 0 auto;
    border: 1px solid;
    border-radius: 10px;
    text-align: center;
    padding: 10px 0px;
    background-color: white;
    .event-show-btn{
      margin: 0 auto;
      margin-bottom: 5px;
      text-align: center;
      display: inline-block;
      width: 200px;
      height: 40px;
      line-height: 30px;
      font-size: 20px;
      color: white;
      border-radius: 10px;
    }
  }
}

.event-show-container{
  width: 90%;
  margin: 0 auto;
  .event-show-card{
    border: thick double lightblue;
    .img-container{
      width: 100%;
      height: 300px;
      img {
        width: 100%;
        height: 100%;
        object-fit: cover;
        border-radius: 10px;
      }
    }
    .text-container{
      text-align: center;
      .event-owner-img{
        display: flex;
        justify-content: center;
        align-items: center;
        padding-top: 5px;
        img{
          width: 50px;
          height: 50px;
          margin: 5px;
          border-radius: 10px;
        }
      }
      .card-text{
        margin-top: 10px;
      }
      .event-show-btn{
        margin: 0 auto;
        margin-bottom: 5px;
        text-align: center;
        display: block;
        width: 200px;
        font-size: 20px;
        color: white;
        border-radius: 10px;
      }
    }
  }
  .event-show-table{
    border: thick double lightblue;
    .event-url{
      width: 90%;
    }
    .jump-to-songs-flex{
      display: flex;
    }
    .join-member-list{
      border: 1px solid black;
      border-radius: 10px;
      padding: 15px;
      max-height: 300px;
      overflow: scroll;
    }
    .complete-songs-list{
      padding-right: 15px;
      max-height: 300px;
      overflow: scroll;
    }
    .recruiting-songs-list{
      padding-right: 15px;
      max-height: 300px;
      overflow: scroll;
    }
    #map {
      height: 300px;
      width: 700px;
    }
    .event-songs-list{
      padding-right: 15px;
      max-height: 600px;
      overflow: scroll;
    }
    .recruiting{
      position: relative;
      border: 3px solid blue;
      border-radius: 10px;
      padding: 10px;
      margin-bottom: 20px;
      .recruiting-caption{
        position: absolute;
        top: 0;
        left: 0;
        border: 3px solid blue;
        border-radius: 10px;
        color: blue;
        font-size: 1em;
        padding: 0 1em;
        margin: 0;
        background-color: white;
        transform: translateY(-50%) translateX(1em);
      }
    }
    .complete{
      position: relative;
      border: 10px solid red;
      border-radius: 10px;
      padding: 10px;
      margin-bottom: 20px;
      .complete-caption{
        position: absolute;
        top: 0;
        left: 0;
        border: 5px solid red;
        border-radius: 10px;
        color: red;
        font-size: 1em;
        padding: 0 1em;
        margin: 0;
        background-color: white;
        transform: translateY(-50%) translateX(1em);
      }
    }
    .event-songs-join-form{
      border: 5px solid #5c87a6;
      border-radius: 10px;
      padding: 15px;
      max-height: 300px;
      overflow: scroll;
    }
    .song-check-box{
      font-size: 20px;
    }
    .song-name{
      font-weight: bold;
      font-size: 20px;
    }
    .join-member{
      font-weight: bold;
      font-size: 15px;
      margin-bottom: 50px;
      .part-name{
        display: block;
        text-align: center;
        border: solid 1px black;
        border-radius: 10px;
        margin-right: 5px;
        width: 200px;
        height: 70px;
        line-height: 60px;
        padding: 5px;
      }
      .member{
        display: flex;
        flex-wrap: wrap;
        margin-top: 5px;
        min-height: 100px;
        width: 90%;
        .join-part-member{
          display:flex;
          flex-flow: column;
        }
      }
      .image-style{
        text-decoration: none;
        margin: 0 10px 0 0;
        display: inline-block;
        .icon_mini{
          width: 50px;
          height: 50px;
          object-fit: cover;
          border-radius: 10px;
          cursor: pointer;
        }
      }
      .delete-join-part-btn{
        height: 30px;
        width: 50px;
      }
    }
    .join-part-list{
      margin-top: 10px;
      border: solid 1px black;
      border-radius: 10px;
      padding: 5px;
      .join-part-song-name{
        font-weight: bold;
        font-size: 25px;
        margin-bottom: 5px;
      }
    }
    .join-part-btn{
      margin: 20px 0 20px 50px;
      min-width: 100px;
    }
    input[type="submit"] {
      width: 20%;
      font-size: 15px;
      color: #fff;
      display: inline-block;
      padding: 15px 0px;
      text-align: center;
      background-color: #5c87a6;
      border: 1px solid #5c87a6;
      border-radius: 5px;
      text-decoration: none;
      cursor: pointer;
      transition: background-color 1s;
    }
    input[type="submit"]:hover {
      color: #5c87a6;
      background-color: #ffffff;
      border: 1px solid #5c87a6;
      border-radius: 5px;
      cursor: pointer;
      transition: background-color 1s;
    }
  }
  .event-index-title{
    width: 100%;
    height: 60px;
    border: 1px solid;
    border-radius: 10px;
    .event-index-count{
      margin: 10px 10px 10px 30px;
      display: flex;
      h4{
        margin-right: 10px;
      }
      .count{
        font-size: 50px;
        line-height: 40px;
      }
    }
    .pc-kaminari{
      margin-top: 10px;
    }
    .pc-serch{
      line-height: 60px;
    }
    .event-index-title__searchForm{
      font-size: 20px;
    }
  }
  .event-index-body{
    margin-top: 50px;
  }
}

@media (max-width: 600px) {
  .event-show-title{
    .event-show-follow{
      .event-show-btn{
        width: 100px;
        font-size: 10px;
      }
    }
  }
  .event-show-container{
    width: 90%;
    margin: 0 auto;
    .event-show-table{
      width: 300px;
      .event-url{
        width: 250px;
      }
      #map {
        height: 280px;
        width: 280px;
      }
    }
    .event-index-title{
      margin-bottom: 120px;
      .event-index-count{
        justify-content: center;
      }
      .sp-kaminari{
        margin-left:100px;
      }
      .sp-serch{
        margin: 0 auto;
      }
    }
    .event-index-body{
      width: 100%;
    }
  }
}

.event-new-title{
  width: 90%;
  text-align: center;
  margin: 0 auto;
  .alert{
    text-align: center;
    color: red;
    border: solid 1px red;
    border-radius: 10px;
  }
}

.event-container{
  width: 90%;
  margin: 0 auto 100px auto;
  .event-table{
    border: thick double lightblue;
    .new-img{
      width: 300px;
      object-fit: cover;
      border-radius: 10px;
      padding: 5px;
    }
    .song-layout{
      border: solid 3px #17a2b8;
      border-radius: 10px;
      padding: 10px;
      .join-part-layout{
        border: solid 3px #17a2b8;
        border-radius: 10px;
        margin-left: 30px;
        padding: 10px;
      }
    }
  }
  .event-btn{
    position: fixed;
    bottom: 30px;
    right: 30px;
    display: block;
    width: 200px;
    margin-left: auto;
    text-align: center;
    font-size: 20px;
    color: white;
    border-radius: 10px;
  }
}

input[type="text"] {
  width: 90%;
  height: 40px;
}

@media (max-width: 600px) {
  .event-container{
    width: 90%;
    .event-table{
      width: 90%;
      .song-container{
        width: 90%;
      }
    }
  }
}

.event-edit-title{
  width: 90%;
  text-align: center;
  margin: 0 auto;
  .alert{
    text-align: center;
    color: red;
    border: solid 1px red;
    border-radius: 10px;
  }
}

